fix: align itens center container

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -2,7 +2,7 @@
 
 .container {
     display: flex;
-    /* align-items: center;       */
+    align-items: center;      
     justify-content: center;
     width: 100%;               
     padding: 0 20px;            
@@ -50,7 +50,7 @@
     height: 900px;
 }
 
-/* fim do container */
+/* fim do container  */
 
 /* carrossel de imagens */
 .carousel {
